Added license for open source

--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -388,4 +388,7 @@
     window.onload = updateProfileDropdown;
   </script>
 </body>
+<footer class="mt-10 text-xs text-center text-gray-500 dark:text-gray-400">
+  © 2025 moruscerberus. Licensed under the MIT License.
+</footer>
 </html>
